got connection to server

--- a/app/templates/universities.hbs
+++ b/app/templates/universities.hbs
@@ -7,7 +7,7 @@
             </thead>
             {{#each controller}}
             <tr><td>
-              {{#linkTo 'results' this}}{{title}} by {{author}}{{/linkTo}}
+              {{#linkTo 'results' this}}{{title}} by {{description}}{{/linkTo}}
             </td></tr>
             {{/each}}
           </table>
