--- a/app/templates/universities.hbs
+++ b/app/templates/universities.hbs
@@ -1,19 +1,16 @@
 
 <div class='row'>
-<div class='span3'>
-<table class='table'>
-            <thead>
-            <tr><th>Recent Posts</th></tr>
-            </thead>
-            {{#each controller}}
-            <tr><td>
-              {{title}} by {{description}}
-            </td></tr>
-            {{/each}}
-          </table>
-</div>
-<div class='span9'>
-	<h1>Universities</h1>
-	{{outlet}}
+<div class='span3 offset5'>
+  <h2>Universities</h2>
+  {{view Ember.TextField valueBinding="searchQuery" placeholder="Search for university"}}
+  <table class='table'>
+    {{#each controller}}
+        <tr><td>
+            {{title}}
+        </td><td>
+            {{description}}
+        </td></tr>
+    {{/each}}
+  </table>
 </div>
 </div>
