applying adding records functionality

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,9 +3,9 @@
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container-fluid">
-         <a class='brand' href='#'>Blogger</a>
+        {{#linkTo 'universities' class='brand'}}Universities{{/linkTo}}
         <ul class='nav'>
-          <li>{{#linkTo 'universities'}}Universities{{/linkTo}}</li>
+          <li>{{#linkTo 'add_uni'}}Add a university{{/linkTo}}</li>
           <li>{{#linkTo 'about'}}About{{/linkTo}}</a></li>
         <ul>
       </div>
